Fixed image download and saving state

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -57,7 +57,7 @@
 					<h4 class="modal-title">Select Or Upload</h4>
 				</div>
 				<div class="modal-body">
-					<select id="defaultImageSelector" class="form-control">
+					<p><select id="defaultImageSelector" class="form-control">
 						<option selected="selected">-Default Images-</option>
 						<option value="assets/images/particle.png">particle.png</option>
 						<option value="assets/images/smokeparticle.png">smokeparticle.png</option>
@@ -73,8 +73,8 @@
 						<option value="assets/images/Snow50px.png">Snow50px.png</option>
 						<option value="assets/images/Sparks.png">Sparks.png</option>
 						<option value="assets/images/HardCircle.png">HardCircle.png</option>
-					</select>
-					<input id="imageUpload" type="file" class="form-control" multiple accept='image/*' />
+					</select></p>
+					<p><input id="imageUpload" type="file" class="form-control" multiple accept='image/*' /></p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
