Fixed negative numbers not being allowed.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -240,13 +240,13 @@
 				<div id="frequency" class="form-group">
 					<div class="col-xs-4 form-label" data-toggle="tooltip"  data-placement="left" title="Seconds between each particle being spawned">Spawn Frequency</div>
 					<div class="col-xs-4">
-						<input id="emitFrequency" type="text" data-min="0.001" data-step="0.001" data-decimals="3" class="frequencySpinner spinner form-control" />
+						<input id="emitFrequency" type="text" data-min="0.001" data-step="0.001" data-decimals="3" class="spinner form-control" />
 					</div>
 				</div>
 				<div id="emitLife" class="form-group">
 					<div class="col-xs-4 form-label" data-toggle="tooltip"  data-placement="left" title="Lifetime of the emitter in seconds before it disables itself. Values of 0 or -1 are infinite">Emitter Lifetime</div>
 					<div class="col-xs-4">
-						<input id="emitLifetime" type="text" data-min="0" data-step="0.01" data-decimals="2" class="positiveSpinner spinner form-control" />
+						<input id="emitLifetime" type="text" data-min="-1" data-step="0.01" data-decimals="2" class="spinner form-control" />
 					</div>
 				</div>
 				<div id="maxParticles" class="form-group">
