Fixed minimum value for burst spacing.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -324,7 +324,7 @@
 				<div id="particleSpacing" class="form-group settings-burst">
 					<div class="col-xs-4 form-label" data-toggle="tooltip"  data-placement="left" title="Spacing in degrees between particles within a wave. 0 gives a random angle for each particle">Particle Spacing</div>
 					<div class="col-xs-4">
-						<input id="emitParticleSpacing" data-toggle="tooltip" data-placement="top" title="Particle Spacing" type="text" class="spinner form-control" />
+						<input id="emitParticleSpacing" data-toggle="tooltip" data-placement="top" title="Particle Spacing" type="text" class="spinner form-control" data-min="0" />
 					</div>
 				</div>
 				<div id="angleStart" class="form-group settings-burst">
