--- a/deploy/index.html
+++ b/deploy/index.html
@@ -149,6 +149,12 @@
 						<input id="speedEnd" data-toggle="tooltip" data-placement="top" title="Ending speed" type="text" class="spinner form-control" />
 					</div>
 				</div>
+				<div class="form-group">
+					<div class="col-xs-4 form-label"  data-toggle="tooltip"  data-placement="left" title="A value between minimum speed multipler and 1 is randomly generated and multiplied with start speed and end speed to provide the actual start speed and end speed for each particle.">Minimum Speed Multiplier</div>
+					<div class="col-xs-8">
+						<input id="minimumSpeedMultiplier" type="text" data-min="0.001" data-step="0.01" data-decimals="2" class="spinner form-control" />
+					</div>
+				</div>
 				<div id="accleration" class="form-group">
 					<div class="col-xs-4 form-label" data-toggle="tooltip"  data-placement="left" title="Acceleration of particles. Prevents using end speed. Without a rotation speed defined, particles will rotate to match movement direction">Acceleration</div>
 					<div class="col-xs-4">
@@ -156,6 +162,12 @@
 					</div>
 					<div class="col-xs-4">
 						<input id="accelY" data-toggle="tooltip" data-placement="top" title="Y position" type="text" class="spinner form-control" />
+					</div>
+				</div>
+                <div class="form-group">
+					<div class="col-xs-4 form-label"  data-toggle="tooltip"  data-placement="left" title="The maximum speed allowed on accelerating particles. If particles are not using Acceleration, use Start Speed and End Speed instead.">Maximum Speed</div>
+					<div class="col-xs-8">
+						<input id="maxSpeed" type="text" class="spinner form-control" />
 					</div>
 				</div>
 				<div id="startRotation" class="form-group">
